--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 
 <!-- About Campaign Section -->
-<section class="w-full px-10 md:px-40 py-10 bg-[#DCFCE790] lg:px-50 py-10 bg-[#DCFCE790] ">
+<section class="w-full px-10 md:px-40 py-10 bg-[#DCFCE790] lg:px-50 py-10 bg-[#DCFCE790] xl:px-90 py-10 bg-[#DCFCE790]">
   <h1 class="text-center mb-6 text-2xl md:text-3xl font-bold">About the Campaign</h1>
   
   <div class="flex flex-col md:flex-row items-center gap-6">
