--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
 
 
 <!-- About Campaign Section -->
-<section class="w-full px-10 md:px-40 py-10 bg-[#DCFCE790] lg:px-50 py-10 bg-[#DCFCE790] xl:px-90 py-10 bg-[#DCFCE790]">
-  <h1 class="text-center mb-6 text-2xl md:text-3xl font-bold">About the Campaign</h1>
+<section class="w-full px-6 md:px-20 lg:px-40 xl:px-60 py-10 bg-[#DCFCE790]">
+  <h1 class="text-center mb-6 text-2xl md:text-3xl xl:text-4xl font-bold">About the Campaign</h1>
   
-  <div class="flex flex-col md:flex-row items-center gap-6">
+  <div class="flex flex-col md:flex-row items-center gap-6 xl:gap-12">
     <!-- Image -->
     <img src="assets/about.png" alt="About Image" 
          class="w-full md:w-1/2 rounded-lg shadow-lg" />
     
     <!-- Text -->
     <div class="mt-4 md:mt-0 md:w-1/2">
-      <p class="mb-4 text-gray-800">
+      <p class="mb-4 text-gray-800 text-base md:text-lg xl:text-xl leading-relaxed">
         Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.
       </p>
-      <ol class="list-disc pl-5 text-gray-800 space-y-1">
+      <ol class="list-disc pl-5 text-gray-800 space-y-2 text-base md:text-lg xl:text-xl">
         <li>Restoration of natural habitats</li>
         <li>Improvement of air quality</li>
         <li>Support for local communities</li>
@@ -147,33 +147,34 @@
     </div>
   </div>
 </section>
+
 <!-- Our Impact Section -->
-<section class="bg-[#CFF0DC] py-10 px-4">
-  <h1 class="text-2xl md:text-3xl font-semibold text-center mb-8">Our Impact</h1>
-  <div class="flex flex-col md:flex-row justify-center items-center gap-6 md:gap-8">
-    <div class="w-full md:w-[300px] bg-white px-6 py-6 rounded-lg shadow text-center">
-      <h1 class="text-3xl font-bold text-[#15803D]">500K+</h1>
-      <p class="text-base mt-1">Trees Planted</p>
+<section class="bg-[#CFF0DC] py-10 px-4 md:px-20 lg:px-40 xl:px-60">
+  <h1 class="text-2xl md:text-3xl xl:text-4xl font-semibold text-center mb-8">Our Impact</h1>
+  <div class="flex flex-col md:flex-row justify-center items-center gap-6 md:gap-8 xl:gap-12">
+    <div class="w-full md:w-[280px] xl:w-[320px] bg-white px-6 py-6 rounded-lg shadow text-center">
+      <h1 class="text-3xl xl:text-4xl font-bold text-[#15803D]">500K+</h1>
+      <p class="text-base xl:text-lg mt-1">Trees Planted</p>
     </div>
-    <div class="w-full md:w-[300px] bg-white px-6 py-6 rounded-lg shadow text-center">
-      <h1 class="text-3xl font-bold text-[#15803D]">120+</h1>
-      <p class="text-base mt-1">Communities Involved</p>
+    <div class="w-full md:w-[280px] xl:w-[320px] bg-white px-6 py-6 rounded-lg shadow text-center">
+      <h1 class="text-3xl xl:text-4xl font-bold text-[#15803D]">120+</h1>
+      <p class="text-base xl:text-lg mt-1">Communities Involved</p>
     </div>
-    <div class="w-full md:w-[300px] bg-white px-6 py-6 rounded-lg shadow text-center">
-      <h1 class="text-3xl font-bold text-[#15803D]">30+</h1>
-      <p class="text-base mt-1">Countries Reached</p>
+    <div class="w-full md:w-[280px] xl:w-[320px] bg-white px-6 py-6 rounded-lg shadow text-center">
+      <h1 class="text-3xl xl:text-4xl font-bold text-[#15803D]">30+</h1>
+      <p class="text-base xl:text-lg mt-1">Countries Reached</p>
     </div>
   </div>
 </section>
 
 <!-- Plant a Tree Section -->
-<section class="flex justify-center items-center bg-[#166534] w-full py-10 px-4">
-  <div class="w-full max-w-lg grid gap-6">
-    <h1 class="font-semibold text-2xl md:text-3xl text-white text-center">Plant a Tree Today</h1>
-    <div class="grid bg-[#15803D] p-6 place-items-center gap-4 rounded-xl">
-      <input type="text" placeholder="Your Name" class="input input-ghost bg-white w-full max-w-xs rounded"/>
-      <input type="email" placeholder="Your Email" class="input input-ghost bg-white w-full max-w-xs rounded"/>
-      <input type="text" placeholder="Number of Trees" list="browsers" class="input input-ghost bg-white w-full max-w-xs rounded"/>
+<section class="flex justify-center items-center bg-[#166534] w-full py-10 px-4 md:px-20 lg:px-40 xl:px-60">
+  <div class="w-full max-w-lg xl:max-w-2xl grid gap-6">
+    <h1 class="font-semibold text-2xl md:text-3xl xl:text-4xl text-white text-center">Plant a Tree Today</h1>
+    <div class="grid bg-[#15803D] p-6 md:p-8 xl:p-10 place-items-center gap-4 rounded-xl">
+      <input type="text" placeholder="Your Name" class="input input-ghost bg-white w-full max-w-sm rounded"/>
+      <input type="email" placeholder="Your Email" class="input input-ghost bg-white w-full max-w-sm rounded"/>
+      <input type="text" placeholder="Number of Trees" list="browsers" class="input input-ghost bg-white w-full max-w-sm rounded"/>
       <datalist id="browsers">
         <option value="Fruit Tree"></option>
         <option value="Flowering Tree"></option>
@@ -186,13 +187,13 @@
         <option value="Climber"></option>
         <option value="Aquatic Plant"></option>
       </datalist>
-      <button class="btn btn-warning bg-[#FACC15] text-[#15803D] w-full max-w-xs rounded-3xl mt-2">Donate Now</button>
+      <button class="btn btn-warning bg-[#FACC15] text-[#15803D] w-full max-w-sm rounded-3xl mt-2">Donate Now</button>
     </div>
   </div>
 </section>
 
 <!-- Footer Section -->
-<footer class="p-4 grid text-center bg-[#14532D] text-white">
+<footer class="p-4 grid text-center bg-[#14532D] text-white text-sm md:text-base xl:text-lg">
   <p>© 2025 Green Earth. All Rights Reserved.</p>
 </footer>
 
